; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_values.c_ghb_dict_get_value.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_values.c_ghb_dict_get_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"returning null (%s)\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ghb_dict_get_value(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32* @ghb_dict_get(i32* %6, i32* %7)
  store i32* %8, i32** %5, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @g_debug(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32* %12)
  br label %14

14:                                               ; preds = %11, %2
  %15 = load i32*, i32** %5, align 8
  ret i32* %15
}

declare dso_local i32* @ghb_dict_get(i32*, i32*) #1

declare dso_local i32 @g_debug(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
